peac_dev/force-app/main/default/objects/Signer_Setup_Api__c/Signer_Setup_Api__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used for the assign signers / account setup api in SAL-3249</description>
    <label>Signer Setup Api</label>
</CustomObject>