peac_dev/force-app/main/default/objects/Signer_Setup_Api__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>