peac_dev/force-app/main/default/objects/Signer_Setup_Api__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>